@@ -1131,7 +1131,9 @@ static struct sdparm_mode_page_item sdparm_mitem_sas_arr[] = {
     {"PPID", PROT_SPEC_PORT_MP, 0, -1, 2, 3, 4, MF_COMMON | MF_CLASH_OK,
         "Port's (transport) protocol identifier",
         "0: fcp; 1: spi; 4: srp; 5: iscsi; 6: sas; 7: adt; 8: ata/atapi"},
-    {"BAE", PROT_SPEC_PORT_MP, 0, -1, 2, 5, 1, MF_COMMON,
+    {"CAWT", PROT_SPEC_PORT_MP, 0, -1, 2, 6, 1, 0,
+        "Continue AWT (arbitration wait time (timer))", NULL},
+    {"BAE", PROT_SPEC_PORT_MP, 0, -1, 2, 5, 1, 0,
         "Broadcast asynchronous event", NULL},
     {"RLM", PROT_SPEC_PORT_MP, 0, -1, 2, 4, 1, MF_COMMON, 
         "Ready LED meaning",
