@@ -2,7 +2,7 @@ sdparm (1.03-0.1) unstable; urgency=low
 
   * allow multiple devices to be given
 
- -- Douglas Gilbert <dgilbert@interlog.org>  Mon, 12 Nov 2007 22:00:00 -0500
+ -- Douglas Gilbert <dgilbert@interlog.org>  Sat, 17 Nov 2007 11:00:00 -0500
 
 sdparm (1.02-1) unstable; urgency=low
 
