@@ -2,10 +2,11 @@ The version number is hardcoded into sdparm.c (in a C string);
 the rpm spec file: sdparm.spec ; the debian/changelog file;
 and the configure.ac file (in the AC_INIT item).
 
-ChangeLog for sdparm-1.03 [20071112]
+ChangeLog for sdparm-1.03 [20071117]
   - allow more than one DEVICE arguments on command line
   - sync with debian unstable files: debian/rules+changelog
   - add speed[=val] command
+  - add CAWT to protocol specific port mode page (sas2r13)
 
 ChangeLog for sdparm-1.02 [20071008]
   - support mode page descriptors with
